--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://yuxwind.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: LIFE & TECHNOLOGY
+subtitle: THE MUSING OF A LEANER
+author: Echo Yu
 simple_search: https://www.google.com/search
 description:
 
