--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Mingqi's Home"
 title_separator          : "-"
 name                     : &name "Mingqi Gao"
 description              : &description "personal description"
-url                      : https://gaomingqi.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://yuxwind.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "gaomingqi/gaomingqi.github.io"
+repository               : "yuxwind/yuxwind.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
